Technical Training on 29th may

--- a/29 May/index.html
+++ b/29 May/index.html
@@ -32,6 +32,30 @@
     />
     <h1>Hello, 🌍</h1>
     <p class="fun">Welcome to Proclink!</p>
-    <input type="checkbox" name="" id=""/>
+    <input type="checkbox" name="" id="" />
+
+    <script>
+      var stud = {
+        name: "Nithin",
+        age: 22,
+      };
+      console.log(stud);
+      console.log(typeof stud);
+      let name = "pandu";
+      var roll = "11";
+      var roll = 11; // redeclaration and reassign is allowed
+      // let name = "dbvc"; re assign is not allowed
+      const id = 2;
+      // const id = 2; redeclaration and reassign is not allowed
+      const a1 = [1, 2, 3];
+      const a2 = a1;
+      const a3 = [8, 9, 4];
+      a1.push(4);
+      a2.push(5);
+      a3.push(7);
+      console.log(a1);
+      console.log(a2);
+      console.log(a3);
+    </script>
   </body>
 </html>
